Tue Oct 18 01:24:24 PDT 2011
        * Add regexp-based number matching (to use, compile as following:
          make DEFS=-DUSE_REGEXP

Wed Aug 31 04:05:41 PDT 2011
        * Allow parsing pcap files with DLT_LINUX_SLL (113) interface type

Thu Jan 14 15:51:17 CET 2010
        * Switch to pcap_next_ex (fixes program termination when there is no
          traffic on interface
        * Allow capture on Raw IP interfaces
        * add -n option to filter calls only to/from specific address

Tue May 15 22:03:33 MSD 2007
        * Port code to sun sparc/solaris
        * Fix startup script for suse compatibility
        * Fix typos

------------------- pcapsipdump 0.1.4 ------------------------------------------
Fri May 11 22:31:49 MSD 2007
        * Avoid file trimming - add 'packet-buffered' (-U) option,
          add SIGTERM graceful handler
        * Fix 64-bit platform pointer issues (use char* in arithmetics instead
          of uint32_t)
        * Fix sip header parsing (RFC 3261 allows no-space-after-semicolon
          syntax, however it is not show in examples and, thus, rarely used)

Thu Apr  2 11:51:33 MSD 2007
        * Include "verbosity level" command-line option

------------------- pcapsipdump 0.1.3 ------------------------------------------
Thu Mar 22 18:35:16 MSK 2007
        * Fix compiler waring about variable, that might be used uninitialized 

Fri Mar  9 16:41:04 MSK 2007
        * Fix bug, leading to segfault on malformed SIP packets

Fri Feb  9 14:50:56 MSK 2007
        * use "$(CC) $(CPPFLAGS) $(LDFLAGS)" instead of hardcoded "c++ -Wall s"
           in order to simplify cross-compiling

------------------- pcapsipdump 0.1.2 ------------------------------------------
Mon Jan 29 18:08:02 MSK 2007
        * add basic command-line options:
	   [-fp] [-i <interface>] [-r <file>] [-d <working directory>]
    	   -f     Do not fork or detach from controlling terminal;
           -p     Do not put the interface into promiscuous mode.